--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,38 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+    <title>React Test</title>
+  <link rel="stylesheet" href="css/onsenui.css"> 
+<!--    node_modules/onsenui/-->
+  <link rel="stylesheet" href="css/onsen-css-components.css">
+  <script src="react.js"></script>
+  <script src="react-dom.js"></script>
+  <script src="onsenui.js"></script>
+  <script src="react-onsenui.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
+</head>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<body>
+  <div id="root"></div>
+<!--
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <script type="text/babel">
+    var App = React.createClass({
+      handleClick: function() {
+        ons.notification.alert('Hello world!');
+      },
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+      render: function() {
+        return (
+          <Ons.Page>
+            <Ons.Button onClick={this.handleClick}>Tap me!</Ons.Button>
+          </Ons.Page>
+        );
+      }
+    });
+    ReactDOM.render(<App />, document.getElementById('root'));
+  </script>
+-->
+</body>
 </html>
